# ConvNN

./: CMakeLists.txt  CUDA_Common.h  CUDA_ConvNN.cu  CUDA_ConvNN.cuh  CUDA_ConvNN.h  CUDA_ConvNN_Layer.cu  CUDA_ConvNN_Layer.h  Common.cpp  Common.h  LICENSE.txt  README.txt  Settings.h  main.cpp
vs2012/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ConvNN.opensdf  ConvNN.sln  ConvNN.vcxproj  ConvNN.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  links.txt
vs2012/ConvNN.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  ConvNN.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs2012/ConvNN.dir/Release/: CL.read.1.tlog  CL.write.1.tlog  ConvNN.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs2012/Release/: error_plot.txt  layer_00_biases.raw  layer_00_momentum_biases.raw  layer_00_momentum_weights.raw  layer_00_weights.raw  layer_02_biases.raw  layer_02_momentum_biases.raw  layer_02_momentum_weights.raw  layer_02_weights.raw  layer_04_biases.raw  layer_04_momentum_biases.raw  layer_04_momentum_weights.raw  layer_04_weights.raw  layer_05_biases.raw  layer_05_momentum_biases.raw  layer_05_momentum_weights.raw  layer_05_weights.raw  layer_06_biases.raw  layer_06_momentum_biases.raw  layer_06_momentum_weights.raw  layer_06_weights.raw
vs2012/x64/Debug/ZERO_CHECK/: custombuild.read.1.tlog
vs2012/x64/Release/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.write.1.tlog
