
# ----------------------------------------------------------------------------
# минимальна€ верси€ CMake, способна€ переварить этот файл
# ----------------------------------------------------------------------------
cmake_minimum_required(VERSION 2.8)
# ----------------------------------------------------------------------------
# Ќазвание проекта
# ----------------------------------------------------------------------------
project (ConvNN) 
# ---------------------------------------------------------------------------- 
# ѕредполагаем, что FindOpenCV.cmake расположен по адресу CMAKE_MODULE_PATH.
# ----------------------------------------------------------------------------
  FIND_PACKAGE(OpenCV)
  find_package(CUDA REQUIRED)
  set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode arch=compute_20,code=sm_20)
  set(CUDA_64_BIT_DEVICE_CODE ON)
# ----------------------------------------------------------------------------  
# ищем все .cpp и .h файлы и добавл€ем их в наш проект 
# ----------------------------------------------------------------------------
  FILE(GLOB folder_source *.cpp *.cu)
  FILE(GLOB folder_header *.h *.cuh)
  SOURCE_GROUP("Source Files" FILES ${folder_source})
  SOURCE_GROUP("Header Files" FILES ${folder_header})
# ----------------------------------------------------------------------------  
# создаем проект
# ----------------------------------------------------------------------------
  CUDA_ADD_EXECUTABLE(ConvNN ${folder_source} ${folder_header})
# ----------------------------------------------------------------------------   
# добавл€ем include директории
# ----------------------------------------------------------------------------
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
# ----------------------------------------------------------------------------
# и Lib-ы opencv 
# ----------------------------------------------------------------------------
  TARGET_LINK_LIBRARIES(ConvNN ${OpenCV_LIBS})
